# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-11-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Perl CloudI API mcast_async return value
    * Add Perl messaging integration test

2014-11-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for the Perl CloudI API and the Perl http_req integration test
    * Fix CloudI C/C++ API functions cloudi_info_key_value_parse,
      cloudi_request_http_qs_parse, CloudI::API::request_http_qs_parse,
      and CloudI::API::info_key_value_parse
    * Add Perl msg_size integration test

2014-11-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug with websocket_protocol usage of cloudi_service_http_cowboy
      to make sure a response arriving from the websocket after a timeout
      has occurred is ignored
    * Add the source code for the Perl CloudI API
    * Fix the default send_sync timeout value for both
      the PHP CloudI API and the Python CloudI API

2014-10-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_api_requests to use new jsx functions
    * Update quickrand with fix
    * Update jsx
    * Update erlcloud
    * Add lhttpc to external dependencies due to erlcloud
    * Update version to be 1.4.0-rc.4 so that it is consistent with the
      http://hex.pm packages
    * Remove cloudi_service_work_manager since it is no longer needed
    * Add support for Solaris/Illumos

2014-10-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout argument to the poll function in the Java CloudI API
    * Make the PHP CloudI API cause asserts to exit to keep all the
      external programming language behavior consistent

2014-10-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout argument to the poll function in the PHP CloudI API
    * Fix request_info parsing in the PHP CloudI API

2014-10-27 Michael Truog   <mjtruog [at] gmail (dot) com>
