@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-11-08 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Improve the efficiency of header and query string encoding in
+      cloudi_service_http_cowboy and cloudi_service_http_elli
+
 2014-11-07 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix Perl CloudI API mcast_async return value
